--- a/discovery-service/pom.xml
+++ b/discovery-service/pom.xml
@@ -6,7 +6,7 @@
         <groupId>com.glwa</groupId>
         <artifactId>ebank-operations</artifactId>
         <version>1.0-SNAPSHOT</version>
-        <relativePath/>
+        <relativePath>../pom.xml</relativePath>
     </parent>
     <artifactId>discovery-service</artifactId>
     <properties>
