--- a/transaction-service/pom.xml
+++ b/transaction-service/pom.xml
@@ -6,6 +6,7 @@
         <artifactId>ebank-operations</artifactId>
         <groupId>com.glwa</groupId>
         <version>1.0-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
     <artifactId>transaction-service</artifactId>
     <properties>
