--- a/.github/workflows/master-pipeline.yml
+++ b/.github/workflows/master-pipeline.yml
@@ -1,4 +1,4 @@
-name: CICD pipeline
+name: Master pipeline
 
 on:
   push:
@@ -23,11 +23,11 @@ jobs:
       run: mvn clean install
 
     - name: Log into registry docker.io
-        uses: docker/login-action@343f7c4344506bcbf9b4de18042ae17996df046d
-        with:
-          registry: docker.io
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_SECRET_TOKEN }}
+      uses: docker/login-action@343f7c4344506bcbf9b4de18042ae17996df046d
+      with:
+        registry: docker.io
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_SECRET_TOKEN }}
 
     - name: Build and publish docker images
-        uses: 0x4r45h/docker-compose-ci@v0.1.0
+      uses: 0x4r45h/docker-compose-ci@v0.1.0
