--- a/.github/workflows/release.pipeline.yml
+++ b/.github/workflows/release.pipeline.yml
@@ -39,9 +39,9 @@ jobs:
       - name: kubectl - Google Cloud GKE cluster.
         uses: ameydev/gke-kubectl-action@master
         env:
-          PROJECT_ID: ${{ env.PROJECT_ID }}
+          PROJECT_ID: ${{ secrets.PROJECT_ID }}
           APPLICATION_CREDENTIALS: ${{ secrets.GKE_SA_KEY }}
-          CLUSTER_NAME: ${{ env.GKE_CLUSTER }}
-          ZONE_NAME: ${{ env.GKE_ZONE }}
+          CLUSTER_NAME: ${{ secrets.GKE_CLUSTER }}
+          ZONE_NAME: ${{ secrets.GKE_ZONE }}
         with:
           args: apply -f k8s/
