--- a/k8s/account-service.yml
+++ b/k8s/account-service.yml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: account-service-app
-          image: froukabidock/account:1.0
+          image: europe-west1-docker.pkg.dev/ebank-428423/ebank-docker-repo/account:1.0
           imagePullPolicy: Always
           ports:
             - containerPort: 9080
