--- a/k8s/auth-service.yml
+++ b/k8s/auth-service.yml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: auth-service-app
-          image: froukabidock/auth-service:1.0
+          image: europe-west1-docker.pkg.dev/ebank-428423/ebank-docker-repo/auth-service:1.0
           imagePullPolicy: Always
           ports:
             - containerPort: 9080
