--- a/k8s/discovery-service.yml
+++ b/k8s/discovery-service.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: discovery-cm
+  name: discovery
 data:
   eureka_service_address: http://discovery:8761/eureka/
 ---
@@ -26,7 +26,6 @@ metadata:
   labels:
     app: discovery
 spec:
-  clusterIP: None
   ports:
     - port: 8761
       name: discovery
@@ -38,7 +37,7 @@ kind: StatefulSet
 metadata:
   name: discovery
 spec:
-  serviceName: "discovery"
+  serviceName: discovery
   replicas: 1
   selector:
     matchLabels:
@@ -50,7 +49,7 @@ spec:
     spec:
       containers:
         - name: discovery
-          image: froukabidock/discovery:1.0
+          image: europe-west1-docker.pkg.dev/ebank-428423/ebank-docker-repo/discovery:1.0
           imagePullPolicy: Always
           ports:
             - containerPort: 8761
@@ -58,5 +57,5 @@ spec:
             - name: discovery
               valueFrom:
                 configMapKeyRef:
-                  name: discovery-cm
-                  key: discovery_service_address
+                  name: discovery
+                  key: discovery
