--- a/k8s/edge-service.yml
+++ b/k8s/edge-service.yml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: edge-service-app
-          image: froukabidock/edge-service:1.0
+          image: europe-west1-docker.pkg.dev/ebank-428423/ebank-docker-repo/edge:1.0
           imagePullPolicy: Always
           ports:
             - containerPort: 9999
