--- a/k8s/user-service.yml
+++ b/k8s/user-service.yml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: user-service-app
-          image: froukabidock/user:1.0
+          image: europe-west1-docker.pkg.dev/ebank-428423/ebank-docker-repo/user:1.0
           imagePullPolicy: Always
           ports:
             - containerPort: 9040
